sorted PC by name

--- a/index.html
+++ b/index.html
@@ -642,108 +642,108 @@ http://www.templatemo.com/tm-406-flex
   	<h2>Senior Program Commitee</h2>
 
 			<table>
-				<tr><td>Shlomo Berkovsky </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CSIRO </td></tr>
+	<tr><td>Dirk Ahlers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Norwegian University of Science and Technology </td></tr>
+<tr><td>Martin Atzmueller </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Tilburg University </td></tr>
+<tr><td>Shlomo Berkovsky </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CSIRO </td></tr>
+<tr><td>Munmun De Choudhury </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Georgia Institute of Technology </td></tr>
+<tr><td>Jana Diesner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Illinois at Urbana-Champaign </td></tr>
+<tr><td>Alexander Felfernig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
+<tr><td>Emilio Ferrara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southern California </td></tr>
+<tr><td>Niloy Ganguly </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indian Institute of Technology Kharagpur </td></tr>
+<tr><td>Bruno Gonçalves </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> New York University </td></tr>
+<tr><td>Charlie Hargood </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth University </td></tr>
+<tr><td>Eelco Herder </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Radboud University </td></tr>
+<tr><td>Andreas Hotho </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wuerzburg </td></tr>
+<tr><td>Geert-Jan Houben </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Delft University of Technology </td></tr>
 <tr><td>Andreas Kaltenbrunner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> NTENT </td></tr>
+<tr><td>Florian Lemmerich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> GESIS - Leibniz Institute for the Social Sciences \& University of Koblenz-Landau </td></tr>
+<tr><td>Wagner Meira Jr. </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> UFMG </td></tr>
+<tr><td>David Millard </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Ethan Munson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wisconsin-Milwaukee </td></tr>
+<tr><td>Wolfgang Nejdl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> L3S and University of Hannover </td></tr>
+<tr><td>Axel Polleres </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business - WU Wien </td></tr>
 <tr><td>Alan Said </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Skövde </td></tr>
+<tr><td>Alessandra Sala </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Ireland </td></tr>
+<tr><td>Christian Sandvig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Michigan </td></tr>
+<tr><td>Rossano Schifanella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Turin </td></tr>
+<tr><td>Christoph Scholz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fraunhofer </td></tr>
+<tr><td>Amit Sheth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kno.e.sis Center, Wright State University </td></tr>
+<tr><td>Elena Simperl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Steffen Staab </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut WeST, University Koblenz-Landau and WAIS, University of Southampton </td></tr>
+<tr><td>Gerd Stumme </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Kassel </td></tr>
 <tr><td>Onur Varol </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
 <tr><td>Arkaitz Zubiaga </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Warwick </td></tr>
-<tr><td>Rossano Schifanella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Turin </td></tr>
-<tr><td>Charlie Hargood </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth University </td></tr>
-<tr><td>Steffen Staab </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut WeST, University Koblenz-Landau and WAIS, University of Southampton </td></tr>
 <tr><td>Luca Maria Aiello </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Cambridge </td></tr>
-<tr><td>Wolfgang Nejdl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> L3S and University of Hannover </td></tr>
-<tr><td>Christoph Scholz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fraunhofer </td></tr>
-<tr><td>Jana Diesner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Illinois at Urbana-Champaign </td></tr>
-<tr><td>Niloy Ganguly </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indian Institute of Technology Kharagpur </td></tr>
-<tr><td>Alexander Felfernig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
-<tr><td>Christian Sandvig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Michigan </td></tr>
-<tr><td>Eelco Herder </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Radboud University </td></tr>
-<tr><td>Bruno Gonçalves </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> New York University </td></tr>
-<tr><td>Geert-Jan Houben </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Delft University of Technology </td></tr>
-<tr><td>Emilio Ferrara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southern California </td></tr>
-<tr><td>Ethan Munson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wisconsin-Milwaukee </td></tr>
-<tr><td>Martin Atzmueller </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Tilburg University </td></tr>
-<tr><td>Florian Lemmerich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> GESIS - Leibniz Institute for the Social Sciences \& University of Koblenz-Landau </td></tr>
-<tr><td>Munmun De Choudhury </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Georgia Institute of Technology </td></tr>
-<tr><td>Dirk Ahlers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Norwegian University of Science and Technology </td></tr>
-<tr><td>Andreas Hotho </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wuerzburg </td></tr>
-<tr><td>Wagner Meira Jr. </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> UFMG </td></tr>
-<tr><td>Amit Sheth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kno.e.sis Center, Wright State University </td></tr>
-<tr><td>Axel Polleres </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business - WU Wien </td></tr>
-<tr><td>Alessandra Sala </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Ireland </td></tr>
-<tr><td>Gerd Stumme </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Kassel </td></tr>
-<tr><td>Elena Simperl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
-<tr><td>David Millard </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
 <tr><td>My T. Thai </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Florida </td></tr>
 			</table>
   	
 		<h2>Program Commitee</h2>
 
 			<table>
-			<tr><td>Jacco van Ossenbruggen </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CWI & VU University Amsterdam </td></tr>
-<tr><td>Christoph Trattner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> MODUL University Vienna </td></tr>
-<tr><td>Haggai Roitman </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IBM Research Haifa </td></tr>
-<tr><td>Emiliano De Cristofaro </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University College London </td></tr>
-<tr><td>Markus Zanker </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Free University of Bozen-Bolzano </td></tr>
-<tr><td>Sigi Reich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Salzburg Research </td></tr>
-<tr><td>Maria Bielikova </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Slovak University of Technology in Bratislava </td></tr>
-<tr><td>Clare J. Hooper </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
 <tr><td>Harshavardhan Achrekar </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Massachusetts Lowell </td></tr>
-<tr><td>Mariano Consens </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Toronto </td></tr>
+<tr><td>Alejandro Bellogin </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Autonoma de Madrid </td></tr>
 <tr><td>Mark Bernstein </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Eastgate Systems, Inc </td></tr>
-<tr><td>Yang Chen </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fudan University </td></tr>
-<tr><td>Simon Walk </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
-<tr><td>Javier Luis Canovas Izquierdo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IN3 - UOC </td></tr>
-<tr><td>Annika Wolff </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Lappeenranta University of Technology </td></tr>
-<tr><td>Parang Saraf </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Virginia Tech </td></tr>
-<tr><td>Symeon Papadopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Information Technologies Institute </td></tr>
-<tr><td>Alexandra Cristea </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Warwick </td></tr>
-<tr><td>Bin Guo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut Telecom SudParis </td></tr>
+<tr><td>Maria Bielikova </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Slovak University of Technology in Bratislava </td></tr>
+<tr><td>Tom Blount </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td>  </td></tr>
+<tr><td>Toine Bogers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Aalborg University </td></tr>
+<tr><td>Carlos Buil Aranda </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Técnica Federico Santa María </td></tr>
 <tr><td>Iván Cantador </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Autónoma de Madrid </td></tr>
-<tr><td>Andreas Harth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Karlsruhe Institute of Technology </td></tr>
-<tr><td>Markel Vigo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Manchester </td></tr>
-<tr><td>Vincent Wade </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Trinity College Dublin </td></tr>
-<tr><td>Cataldo Musto </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Dipartimento di Informatica - University of Bari </td></tr>
-<tr><td>Srinath Srinivasa </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> International Institute of Information Technology, Bangalore </td></tr>
-<tr><td>Dietmar Jannach </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> AAU Klagenfurt </td></tr>
-<tr><td>Javier D. Fernández </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business </td></tr>
-<tr><td>Michael Granitzer </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Passau </td></tr>
-<tr><td>Ying Ding </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indiana University Bloomington </td></tr>
-<tr><td>Carsten Ullrich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> DFKI GmbH </td></tr>
-<tr><td>Akihiro Kashihara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Electro-Communications </td></tr>
 <tr><td>Federica Cena </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Department of Computer Science, University of Torino </td></tr>
 <tr><td>Fred Charles </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth University, Faculty of Science and Technology </td></tr>
-<tr><td>Markus Krötzsch </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> TU Dresden </td></tr>
-<tr><td>Tom Blount </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
-<tr><td>Min-Yen Kan </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> National University of Singapore </td></tr>
-<tr><td>Miriam Redi </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Yahoo </td></tr>
+<tr><td>Yang Chen </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fudan University </td></tr>
 <tr><td>Alvin Chin </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> BMW Group </td></tr>
-<tr><td>Efstratios Gallopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Patras </td></tr>
-<tr><td>Carlos Buil Aranda </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Técnica Federico Santa María </td></tr>
+<tr><td>Mariano Consens </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Toronto </td></tr>
+<tr><td>Alexandra Cristea </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Warwick </td></tr>
 <tr><td>Paul De Bra </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Eindhoven University of Technology </td></tr>
+<tr><td>Emiliano De Cristofaro </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University College London </td></tr>
+<tr><td>Ying Ding </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indiana University Bloomington </td></tr>
 <tr><td>Mark Finlayson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Florida International University </td></tr>
-<tr><td>Anna Lisa Gentile </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IBM </td></tr>
-<tr><td>Andrea Passarella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IIT-CNR </td></tr>
-<tr><td>Rikki Prince </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Efstratios Gallopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Patras </td></tr>
+<tr><td>Franca Garzotto </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Politecnico di Milano </td></tr>
+<tr><td>Michael Granitzer </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Passau </td></tr>
 <tr><td>Tudor Groza </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The Garvan Institute of Medical Research </td></tr>
-<tr><td>Demetrios Sampson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Curtin University </td></tr>
-<tr><td>Elisabeth Lex </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
+<tr><td>Bin Guo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut Telecom SudParis </td></tr>
+<tr><td>Andreas Harth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Karlsruhe Institute of Technology </td></tr>
+<tr><td>Stratis Ioannidis </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
+<tr><td>Dietmar Jannach </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> AAU Klagenfurt </td></tr>
+<tr><td>Min-Yen Kan </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> National University of Singapore </td></tr>
+<tr><td>Akihiro Kashihara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Electro-Communications </td></tr>
+<tr><td>Donghuyn Kim </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kennesaw State University </td></tr>
+<tr><td>Hartmut Koenitz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Georgia </td></tr>
 <tr><td>Nicolas Kourtellis </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Telefonica Research </td></tr>
-<tr><td>Alejandro Bellogin </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Autonoma de Madrid </td></tr>
+<tr><td>Markus Krötzsch </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> TU Dresden </td></tr>
 <tr><td>Alberto Laender </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidade Federal de Minas Gerais, Brazil </td></tr>
 <tr><td>Kyumin Lee </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Worcester Polytechnic Institute </td></tr>
-<tr><td>Yeliz Yesilada </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Manchester </td></tr>
+<tr><td>Elisabeth Lex </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
 <tr><td>Yu-Ru Lin </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Pittsburgh </td></tr>
-<tr><td>Giovanni Semeraro </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Bari </td></tr>
-<tr><td>Toine Bogers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Aalborg University </td></tr>
+<tr><td>Cataldo Musto </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Dipartimento di Informatica - University of Bari </td></tr>
 <tr><td>Frank Nack </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Amsterdam </td></tr>
-<tr><td>Stratis Ioannidis </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
-<tr><td>Hartmut Koenitz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Georgia </td></tr>
-<tr><td>Mark Weal </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
-<tr><td>Franca Garzotto </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Politecnico di Milano </td></tr>
+<tr><td>Symeon Papadopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Information Technologies Institute </td></tr>
+<tr><td>Andrea Passarella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IIT-CNR </td></tr>
 <tr><td>Heiko Paulheim </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Mannheim </td></tr>
+<tr><td>Rikki Prince </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Miriam Redi </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Yahoo </td></tr>
+<tr><td>Sigi Reich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Salzburg Research </td></tr>
+<tr><td>Haggai Roitman </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IBM Research Haifa </td></tr>
+<tr><td>Demetrios Sampson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Curtin University </td></tr>
+<tr><td>Parang Saraf </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Virginia Tech </td></tr>
+<tr><td>Giovanni Semeraro </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Bari </td></tr>
+<tr><td>Srinath Srinivasa </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> International Institute of Information Technology, Bangalore </td></tr>
+<tr><td>Christoph Trattner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> MODUL University Vienna </td></tr>
+<tr><td>Carsten Ullrich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> DFKI GmbH </td></tr>
+<tr><td>Markel Vigo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Manchester </td></tr>
+<tr><td>Vincent Wade </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Trinity College Dublin </td></tr>
+<tr><td>Simon Walk </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
+<tr><td>Mark Weal </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Annika Wolff </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Lappeenranta University of Technology </td></tr>
+<tr><td>Yeliz Yesilada </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Manchester </td></tr>
+<tr><td>Markus Zanker </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Free University of Bozen-Bolzano </td></tr>
+<tr><td>Jacco van Ossenbruggen </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CWI & VU University Amsterdam </td></tr>
+<tr><td>Javier D. Fernández </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business </td></tr>
+<tr><td>Clare J. Hooper </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Anna Lisa Gentile </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IBM </td></tr>
+<tr><td>Javier Luis Canovas Izquierdo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IN3 - UOC </td></tr>
 <tr><td>Thang N. Dinh </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Virginia Commonwealth University </td></tr>
-<tr><td>Donghuyn Kim </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kennesaw State University </td></tr>
 			</table>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
