--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ http://www.templatemo.com/tm-406-flex
 <tr><td>Alejandro Bellogin </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Autonoma de Madrid </td></tr>
 <tr><td>Mark Bernstein </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Eastgate Systems, Inc </td></tr>
 <tr><td>Maria Bielikova </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Slovak University of Technology in Bratislava </td></tr>
-<tr><td>Tom Blount </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td>  </td></tr>
+<tr><td>Tom Blount </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
 <tr><td>Toine Bogers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Aalborg University </td></tr>
 <tr><td>Carlos Buil Aranda </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Técnica Federico Santa María </td></tr>
 <tr><td>Iván Cantador </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Universidad Autónoma de Madrid </td></tr>
