--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@ http://www.templatemo.com/tm-406-flex
                     <div class="heading-section col-md-12 text-left">
                         <h2>News</h2>
                         <ul>
-				<li><del><h3> HT 2018 Deadline for workshop Proposals Deadline is extended to December 11<sup>th</sup> 2017 , Applications to be directed at <a href="mailto:gadiraju@L3S.de" target="_top">Ujjwal Gadiraju</a>  or <a href="mailto:haewoon@acm.org" target="_top"> Haewoon Kwak </a> </h3></del></li>
-                            <li><del><h3> HT 2018 Deadline for workshop Proposals: December 1<sup>st</sup> 2017 , Applications to be directed at <a href="mailto:gadiraju@L3S.de" target="_top">Ujjwal Gadiraju</a>  or <a href="mailto:haewoon@acm.org" target="_top"> Haewoon Kwak </a> </h3></del></li>
+                            <li><h3>Workshops have been shortlisted for HT'18, More <a href="#Workshops">here</a></li> </h3>
                             <li><h3> HT 2018 Call for papers are out:  <a href="./assets/HT18 Poster.pdf">Details of CFP</a> </h3></li>
                             <li><h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li>
                             <li><h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a> </h3></li>
