--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ http://www.templatemo.com/tm-406-flex
                                     <p>Baltimore, Maryland</p>
                                     <p>9-12 July, 2018</p>
                                     <a href="#About" class="slider-btn">Important Dates</a>
-                                    <a href="https://easychair.org/my/conference.cgi?conf=ht18;a=12905039" target="_blank" class="slider-btn">Submission Site</a>
+                                    <a href="https://easychair.org/account/signin.cgi?timeout=1;key=63054552.eOcq44KCdhw0li5R" target="_blank" class="slider-btn">Submission Site</a>
                                 </div>
                             </li>
                         </ul>
@@ -234,6 +234,7 @@ http://www.templatemo.com/tm-406-flex
                     <div class="heading-section col-md-12 text-left">
                         <h2>News</h2>
                         <ul>
+                            <li><h3>This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></li> </h3>
                             <li><h3>Workshops have been shortlisted for HT'18, More <a href="#Workshops">here</a></li> </h3>
                             <li><h3> HT 2018 Call for papers are out:  <a href="./assets/HT18 Poster.pdf">Details of CFP</a> </h3></li>
                             <li><h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li>
@@ -527,7 +528,7 @@ http://www.templatemo.com/tm-406-flex
 <div class="bluesky" style="display:none;">
 	    <h2>Call for Blue Sky Ideas</h2>
 	    <p>
-	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same <a href="http://www.acm.org/publications/proceedings-template">submission template and are to be submitted using the same <a href="https://easychair.org/my/conference.cgi?conf=ht18;a=12905039">submission site</a>. 
+	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same <a href="http://www.acm.org/publications/proceedings-template">submission template and are to be submitted using the same <a href="https://easychair.org/account/signin.cgi?timeout=1;key=63054552.eOcq44KCdhw0li5R">submission site</a>. 
 		    Thanks to CCC sponsorship, the top 3 papers submitted to this track will be awarded with travel grants of $1000, $750 and $500 respectively. Successful submissions will be published in the regular proceedings. All submissions to this special track will be evaluated by a dedicated committee consisting of Krishna Gummadi, David Millard, Charlie Hargood, Nishanth Sastry and Ingmar Weber.
  </p>
 </div>
