Add a senior memeber and change affiliation of a member

--- a/index.html
+++ b/index.html
@@ -595,38 +595,39 @@ http://www.templatemo.com/tm-406-flex
 
 			<table>
 	<tr><td>Dirk Ahlers </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Norwegian University of Science and Technology </td></tr>
-<tr><td>Martin Atzmueller </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Tilburg University </td></tr>
-<tr><td>Shlomo Berkovsky </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CSIRO </td></tr>
-<tr><td>Munmun De Choudhury </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Georgia Institute of Technology </td></tr>
-<tr><td>Jana Diesner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Illinois at Urbana-Champaign </td></tr>
-<tr><td>Alexander Felfernig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
-<tr><td>Emilio Ferrara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southern California </td></tr>
-<tr><td>Niloy Ganguly </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indian Institute of Technology Kharagpur </td></tr>
-<tr><td>Bruno Gonçalves </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> New York University </td></tr>
-<tr><td>Charlie Hargood </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth University </td></tr>
-<tr><td>Eelco Herder </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Radboud University </td></tr>
-<tr><td>Andreas Hotho </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wuerzburg </td></tr>
-<tr><td>Geert-Jan Houben </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Delft University of Technology </td></tr>
-<tr><td>Andreas Kaltenbrunner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> NTENT </td></tr>
-<tr><td>Florian Lemmerich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> GESIS - Leibniz Institute for the Social Sciences \& University of Koblenz-Landau </td></tr>
-<tr><td>Luca Maria Aiello </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Cambridge </td></tr>
-<tr><td>Wagner Meira Jr. </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> UFMG </td></tr>
-<tr><td>David Millard </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
-<tr><td>Ethan Munson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wisconsin-Milwaukee </td></tr>
-<tr><td>Wolfgang Nejdl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> L3S and University of Hannover </td></tr>
-<tr><td>Axel Polleres </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business - WU Wien </td></tr>
-<tr><td>Alan Said </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Skövde </td></tr>
-<tr><td>Alessandra Sala </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Ireland </td></tr>
-<tr><td>Christian Sandvig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Michigan </td></tr>
-<tr><td>Rossano Schifanella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Turin </td></tr>
-<tr><td>Christoph Scholz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fraunhofer </td></tr>
-<tr><td>Amit Sheth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kno.e.sis Center, Wright State University </td></tr>
-<tr><td>Elena Simperl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
-<tr><td>Steffen Staab </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut WeST, University Koblenz-Landau and WAIS, University of Southampton </td></tr>
-<tr><td>Gerd Stumme </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Kassel </td></tr>
-<tr><td>My T. Thai </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Florida </td></tr>
-<tr><td>Onur Varol </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
-<tr><td>Arkaitz Zubiaga </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Warwick </td></tr>
+    <tr><td>Martin Atzmueller </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Tilburg University </td></tr>
+    <tr><td>Shlomo Berkovsky </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> CSIRO </td></tr>
+    <tr><td>Munmun De Choudhury </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Georgia Institute of Technology </td></tr>
+    <tr><td>Jana Diesner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Illinois at Urbana-Champaign </td></tr>
+    <tr><td>Alexander Felfernig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
+    <tr><td>Emilio Ferrara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southern California </td></tr>
+    <tr><td>Niloy Ganguly </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Indian Institute of Technology Kharagpur </td></tr>
+    <tr><td>Bruno Gonçalves </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> New York University </td></tr>
+    <tr><td>Charlie Hargood </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth University </td></tr>
+    <tr><td>Eelco Herder </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Radboud University </td></tr>
+    <tr><td>Denis Helic </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology, Austria. </td></tr>
+    <tr><td>Andreas Hotho </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wuerzburg </td></tr>
+    <tr><td>Geert-Jan Houben </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Delft University of Technology </td></tr>
+    <tr><td>Andreas Kaltenbrunner </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> NTENT </td></tr>
+    <tr><td>Florian Lemmerich </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> GESIS - Leibniz Institute for the Social Sciences \& University of Koblenz-Landau </td></tr>
+    <tr><td>Luca Maria Aiello </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Cambridge </td></tr>
+    <tr><td>Wagner Meira Jr. </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> UFMG </td></tr>
+    <tr><td>David Millard </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+    <tr><td>Ethan Munson </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Wisconsin-Milwaukee </td></tr>
+    <tr><td>Wolfgang Nejdl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> L3S and University of Hannover </td></tr>
+    <tr><td>Axel Polleres </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Vienna University of Economics and Business - WU Wien </td></tr>
+    <tr><td>Alan Said </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Skövde </td></tr>
+    <tr><td>Alessandra Sala </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Ireland </td></tr>
+    <tr><td>Christian Sandvig </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Michigan </td></tr>
+    <tr><td>Rossano Schifanella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Turin </td></tr>
+    <tr><td>Christoph Scholz </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Fraunhofer </td></tr>
+    <tr><td>Amit Sheth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Kno.e.sis Center, Wright State University </td></tr>
+    <tr><td>Elena Simperl </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+    <tr><td>Steffen Staab </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut WeST, University Koblenz-Landau and WAIS, University of Southampton </td></tr>
+    <tr><td>Gerd Stumme </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Kassel </td></tr>
+    <tr><td>My T. Thai </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Florida </td></tr>
+    <tr><td>Onur Varol </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
+    <tr><td>Arkaitz Zubiaga </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Warwick </td></tr>
 			</table>
   	
 		<h2>Program Commitee</h2>
@@ -675,7 +676,7 @@ http://www.templatemo.com/tm-406-flex
 <tr><td>Cataldo Musto </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Dipartimento di Informatica - University of Bari </td></tr>
 <tr><td>Thang N. Dinh </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Virginia Commonwealth University </td></tr>
 <tr><td>Frank Nack </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Amsterdam </td></tr>
-<tr><td>Symeon Papadopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Information Technologies Institute </td></tr>
+<tr><td>Symeon Papadopoulos </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Centre for Research and Technology Hellas </td></tr>
 <tr><td>Andrea Passarella </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> IIT-CNR </td></tr>
 <tr><td>Heiko Paulheim </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Mannheim </td></tr>
 <tr><td>Rikki Prince </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
